# strength-estimator-of-shogi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  check_data.py  create_rankinf.py  kif_analyze.py  mcts_acc_table.py  parse_csa.py  parse_csa_to_sgf.py  score_cehkc.py  shogi strength estimator.txt  shogi_bridge.sh  ts.py  usi_main.cpp
cfg/: sa_shogi_mcts.cfg  se_infty_shogi.cfg  se_infty_shogi_mcts.cfg  se_shogi.cfg  se_shogi_mcts.cfg  sl_shogi.cfg
docs/: README.md
minizero/: Dockerfile
minizero/minizero/console/: mode_handler.cpp
minizero/minizero/environment/: CMakeLists.txt  environment.h
minizero/minizero/environment/shogi/: Bitboard.cpp  Bitboard.h  Data.cpp  Data.h  Hand.h  MoveGenerator.cpp  MoveGenerator.h  MoveTable.h  Piece.cpp  Piece.h  Square.cpp  Square.h  StringUtil.h  Zobrist.cpp  Zobrist.h  board.cpp  board.h  move.cpp  move.h  moves.h  shogi.cpp  shogi.h  test.cpp  test_convreter.cpp
minizero/minizero/network/py/: network_unit.py
minizero/minizero/utils/: vector_map.h
minizero/scripts/: build.sh  start-container.sh
scripts/: data.py  train.sh
strength/: CMakeLists.txt  st_mode_handler.cpp
strength/misc/: CMakeLists.txt  evaluator.cpp  evaluator.h  game_wrapper.cpp  st_actor.h  st_configuration.cpp  st_mcts.h
strength/trainer/: train.py
